--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,27 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  adapter: mysql2
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_general_ci
+  username: admin
+  password: 9acZp290Bg59N
+  host: database-1.chm2ezgfmb6c.ap-northeast-1.rds.amazonaws.com
+  pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: runteq_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: runteq_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: runteq_production
